--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -6,13 +6,13 @@
   <a data-ng-click="setCurrency('USD')" data-ng-class="{active: currency.symbol == 'USD'}">USD</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('BTC')" data-ng-class="{active: currency.symbol == 'BTC'}">BTC</a>
+  <a data-ng-click="setCurrency('LTC')" data-ng-class="{active: currency.symbol == 'LTC'}">LTC</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('mBTC')" data-ng-class="{active: currency.symbol == 'mBTC'}">mBTC</a>
+  <a data-ng-click="setCurrency('mLTC')" data-ng-class="{active: currency.symbol == 'mLTC'}">mLTC</a>
   </li> 
   <li>
-  <a data-ng-click="setCurrency('bits')" data-ng-class="{active: currency.symbol == 'bits'}">bits</a>
+  <a data-ng-click="setCurrency('lites')" data-ng-class="{active: currency.symbol == 'lites'}">lites</a>
   </li>
 </ul>
 
