Update currency denominations to lites/photons.

--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -9,10 +9,10 @@
   <a data-ng-click="setCurrency('LTC')" data-ng-class="{active: currency.symbol == 'LTC'}">LTC</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('mLTC')" data-ng-class="{active: currency.symbol == 'mLTC'}">mLTC</a>
+  <a data-ng-click="setCurrency('lites')" data-ng-class="{active: currency.symbol == 'lites')"'}">lites</a>
   </li> 
   <li>
-  <a data-ng-click="setCurrency('lites')" data-ng-class="{active: currency.symbol == 'lites'}">lites</a>
+  <a data-ng-click="setCurrency('photons')" data-ng-class="{active: currency.symbol == 'photons'}">photons</a>
   </li>
 </ul>
 
