--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -9,7 +9,7 @@
   <a data-ng-click="setCurrency('LTC')" data-ng-class="{active: currency.symbol == 'LTC'}">LTC</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('lites')" data-ng-class="{active: currency.symbol == 'lites')"'}">lites</a>
+  <a data-ng-click="setCurrency('lites')" data-ng-class="{active: currency.symbol == 'lites'}">lites</a>
   </li> 
   <li>
   <a data-ng-click="setCurrency('photons')" data-ng-class="{active: currency.symbol == 'photons'}">photons</a>
