--- a/public/views/messages_verify.html
+++ b/public/views/messages_verify.html
@@ -70,11 +70,11 @@
     </div>
     <div class="col-xs-12 col-md-4 col-gray">
       <p translate>
-        Litecoin comes with a way of signing arbitrary messages.
+        DigiByte comes with a way of signing arbitrary messages.
       </p>
       <p translate>
         This form can be used to verify that a message comes from
-        a specific Litecoin address.
+        a specific DigiByte address.
       </p>
     </div>
   </div>
