--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -199,7 +199,7 @@ margin-left: 0;
   margin-left: 5px;
 }
 
-#search { color: #fff; }
+#search { color: #06c; }
 
 #search::-webkit-input-placeholder {
   color: #BCDF7E;
@@ -805,7 +805,7 @@ a.v_highlight_more {
   .navbar {
     min-height: 50px;
   }
-  #search { color: #000; }
+  #search { color: #06c; }
   .txvalues {
     display: block;
     margin: 5px;
