--- a/public/views/includes/connection.html
+++ b/public/views/includes/connection.html
@@ -11,7 +11,7 @@
     </p>
 
     <p data-ng-show="!serverOnline" translate>
-      Can't connect to insight server. Attempting to reconnect... 
+      Can't connect to digiexplorer server. Attempting to reconnect... 
     </p>
 
     <p data-ng-show="!clienteOnline" translate>
