--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 /* Styling for the ngProgress itself */
 #ngProgress {
-  background-color: #6C9032 !important;
+  background-color: #06c !important;
   box-shadow: none !important;
   color: #373D42 !important;
   height: 3px !important;
@@ -128,7 +128,7 @@ margin-left: 0;
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus {
-  background-color: #6C9032;
+  background-color: #06c;
   color: #fff;
 }
 
@@ -202,14 +202,14 @@ margin-left: 0;
 #search { color: #06c; }
 
 #search::-webkit-input-placeholder {
-  color: #BCDF7E;
+  color: #06c;
   font-family: 'Ubuntu', sans-serif;
   font-style: italic;
   font-weight: 100;
 }
 
 #search::-moz-placeholder {
-  color: #BCDF7E;
+  color: #06c;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 100;
 }
@@ -318,7 +318,7 @@ margin-left: 0;
 }
 .btn-primary {
   background-color: #06c;
-  border: 2px solid #76AF0F;
+  border: 2px solid #06c;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active,
