--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -3,16 +3,13 @@
 </a>
 <ul class="dropdown-menu">
   <li>
-  <a data-ng-click="setCurrency('USD')" data-ng-class="{active: currency.symbol == 'USD'}">USD</a>
+    <a data-ng-click="setCurrency('USD')" data-ng-class="{active: currency.symbol == 'USD'}">USD</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('DGB')" data-ng-class="{active: currency.symbol == 'DGB'}">DGB</a>
+    <a data-ng-click="setCurrency('BTC')" data-ng-class="{active: currency.symbol == 'BTC'}">BTC</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('lites')" data-ng-class="{active: currency.symbol == 'lites'}">lites</a>
-  </li> 
-  <li>
-  <a data-ng-click="setCurrency('photons')" data-ng-class="{active: currency.symbol == 'photons'}">photons</a>
+    <a data-ng-click="setCurrency('DGB')" data-ng-class="{active: currency.symbol == 'DGB'}">DGB</a>
   </li>
 </ul>
 
